--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "materialize-css": "^1.0.0",
+    "nouislider": "^15.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "8.0.2",
@@ -23,7 +25,8 @@
     "react-scripts": "5.0.1",
     "ts-loader": "^9.3.0",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "wnumb": "^1.2.0"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve",
