--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "server": "npm run server --prefix server",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    " ": "concurrently \"npm install --prefix client \" \"npm install --prefix server \""
   },
   "keywords": [
     "mern",
