--- a/client/package.json
+++ b/client/package.json
@@ -3,30 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "@reduxjs/toolkit": "^1.8.2",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/materialize-css": "^1.0.11",
-    "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "materialize-css": "^1.0.0",
-    "nouislider": "^15.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "8.0.2",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "ts-loader": "^9.3.0",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "wnumb": "^1.2.0"
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve",
